--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 				</h1>
 				<button
 					id="create-task"
-					class="btn btn-block btn-success"
+					class="btn btn-block btn-add"
 					data-toggle="modal"
 					data-target="#task-form-modal"
 				>
 					<span class="mr-2 oi oi-plus"></span>
 					Add Task
 				</button>
-				<button id="remove-tasks" class="btn btn-block btn-danger">
+				<button id="remove-tasks" class="btn btn-block btn-delete">
 					<span class="mr-2 oi oi-trash"></span>
 					Delete All Tasks
 				</button>
@@ -88,9 +88,9 @@
 						</div>
 					</div>
 				</div>
-				<div id="trash" class="mt-auto">
-					<div class="w-100 bg-danger p-3 text-center text-light display-4">
-						<span class="mr-2 oi oi-trash"></span>
+				<div id="trash" class="mt-auto overflow-hidden">
+					<div class="w-100 p-3 text-center text-light bottom-trash">
+						<span class="oi oi-trash"></span>
 						Drop Here to Remove.
 					</div>
 				</div>
@@ -142,14 +142,10 @@
 						</form>
 					</div>
 					<div class="modal-footer">
-						<button
-							type="button"
-							class="btn btn-secondary"
-							data-dismiss="modal"
-						>
+						<button type="button" class="btn btn-close" data-dismiss="modal">
 							Close
 						</button>
-						<button type="button" class="btn btn-primary">Save Task</button>
+						<button type="button" class="btn btn-save">Save Task</button>
 					</div>
 				</div>
 			</div>
